2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Remove.
	* bootstrap.sh: Remove.
	* configure.ac: Do not create bootstrap.sh.
	* basicdefs.h: Remove guards.
	* sed/execute.c [BOOTSTRAP]: Remove guards.
	* sed/sed.c [BOOTSTRAP]: Remove guards.
	* sed/sed.h [BOOTSTRAP]: Remove guards.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* gnulib: Update.

2012-03-16  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed.x: Document address behavior across input files.
	* doc/sed.1: Regenerate.

2012-02-13  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Test whether fopen("foo", "rt") works.
	* sed/compile.c: Do not open scripts with "rt" mode if it doesn't.
	* sed/sed.c: Never open input files with "rt" mode.

2012-02-05  Paolo Bonzini  <bonzini@gnu.org>
            Jim Hill  <gjthill@gmail.com>

	* autoboot.conf: Change getline to getdelim.
	* doc/sed-in.texi: Document -z/--null-data.
	* doc/sed.texi: Regenerate.
	* doc/sed.1: Regenerate.
	* sed/execute.c: Change '\n' to buffer_delimiter.
	* sed/sed.c: Add support for -z/--null-data.
	* sed/sed.h: Add buffer_delimiter.
	* sed/utils.c: Change ck_getline to ck_getdelim.
	* sed/utils.h: Change ck_getline to ck_getdelim.
	* NEWS: Document new option.

2011-11-23  Paolo Bonzini  <bonzini@gnu.org>

	* doc/sed-in.texi: Document how multiline mode affects matching
	newlines against period.  Reported by Dmitry Bolshakov.

2011-08-29  Paolo Bonzini  <bonzini@gnu.org>

	* sed/sed.c (usage): Fix documentation for -i.  Reported by
	Dennis Bartlett.

2011-07-11  Jim Meyering  <meyering@redhat.com>

	avoid silent data loss when an input line is 2^31 bytes or longer
	If one line in a file has length (including newline) of 2^31, then
	applying sed -i to that file truncates it to size 0.  I first
	noticed it like this: Create a file with line of length 2^31-1
	  $ perl -le 'print "v"x(2**31-1)' > k
	Then prepend a byte to that line:
	  $ sed -i 's/^/v/' k
	Surprise!  The file is empty.